--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -17,22 +18,21 @@
       <div class="row">
         <div class="col-md-1"></div>
 
-        <div class="col-md-7">
+        <div class="col-md-8">
           <div class="product-list">
-            {% if query %}
+            {% if search_product %}
               {% if products %}
                 {% for product in products %}
                   <div class="product-card">
                     <img class="image" src="{{ product.image }}">
                     <div class="mt-0 mb-0 product-info">
                       <div class="product-name">
-                        <a href="{% url 'product_detail' product.id %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
-                      </div>
+                        <a href="{% url 'product_detail' product.name %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
+                      </div>                     
                       <div class="product-part-number">Номер запчасти: {{ product.part_number }}</div>
                       <div class="product-model">{{ product.model_info }}</div>
                       <div class="product-price">{{ product.price }}</div>
                     </div>
-                    <div class="add-to-cart-button">В корзину</div>
                   </div>
                 {% endfor %}
               {% else %}
@@ -44,13 +44,12 @@
                   <img class="image" src="{{ product.image }}">
                   <div class="mt-0 mb-0 product-info">
                     <div class="product-name">
-                      <a href="{% url 'product_detail' product.id %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
-                    </div>
+                      <a href="{% url 'product_detail' product.name %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
+                    </div>                                                                           
                     <div class="product-part-number">Номер запчасти: {{ product.part_number }}</div>
                     <div class="product-model">{{ product.model_info }}</div>
                     <div class="product-price">{{ product.price }}</div>
                   </div>
-                  <div class="add-to-cart-button">В корзину</div>
                 </div>
               {% endfor %}
             {% endif %}
@@ -62,8 +61,8 @@
             <!-- Search Bar -->
             <form method="GET" action=".">
               <div class="search-bar">
-                <input type="text" name="query" class="search-input" 
-                       placeholder="Введите название" value="{{ request.GET.query|default_if_none:'' }}">
+                <input type="text" name="search_product" class="search-input" 
+                       placeholder="Введите название" value="{{ request.GET.search_product|default_if_none:'' }}">
                 <div class="search-icon">
                   <img src="{% static 'img/search-icon.svg' %}"/>
                 </div>
@@ -72,14 +71,13 @@
 
             <!-- Cart Icon and Count -->
             <div class="cart">
-              <a href="{% url 'basket' 1 %}">
+              <a href="{% url 'car_order' 'order_1' %}">
                 <img src="{% static 'img/shopping-cart.svg' %}"/>
               </a>
               <span class="cart-badge position-absolute top-10 start-40 translate-right">2</span>
             </div>
           </div>
         </div>
-        <div class="col-md-1"></div>
       </div>
     </div>
   </body>
