--- a/templates/main.html
+++ b/templates/main.html
@@ -27,7 +27,9 @@
                     <img class="image" src="{{ product.image }}">
                     <div class="mt-0 mb-0 product-info">
                       <div class="product-name">
-                        <a href="{% url 'product_detail' product.name %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
+                        <a href="{% url 'product_detail' product.slug %}" style="color: black; text-decoration: none;">
+                          {{ product.name }}
+                        </a>
                       </div>                     
                       <div class="product-part-number">Номер запчасти: {{ product.part_number }}</div>
                       <div class="product-model">{{ product.model_info }}</div>
@@ -44,7 +46,9 @@
                   <img class="image" src="{{ product.image }}">
                   <div class="mt-0 mb-0 product-info">
                     <div class="product-name">
-                      <a href="{% url 'product_detail' product.name %}" style="color: black; text-decoration: none;">{{ product.name }}</a>
+                      <a href="{% url 'product_detail' product.slug %}" style="color: black; text-decoration: none;">
+                        {{ product.name }}
+                      </a>
                     </div>                                                                           
                     <div class="product-part-number">Номер запчасти: {{ product.part_number }}</div>
                     <div class="product-model">{{ product.model_info }}</div>
