--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -23,7 +23,7 @@
                 <img src="{{ product.image }}" alt="{{ product.name }}">
                 <div class="info">
                     <div class="price-cart-container">
-                        <p class="price">{{ product.price }}</p>
+                        <p class="price">{{ product.price }} ₽</p>
                     </div>
                     <div class="p"><strong>Артикул:</strong> {{ product.article_number }}</div>
                     <div class="p"><strong>Марка:</strong> {{ product.brand }}</div>
