--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -288,7 +288,7 @@ body {
   font-size: 18px;
   font-weight: bold; 
   margin-top: 20px; 
-  margin-left: 35px;
+  margin-left: 220px;
   color: black;
   font-family: noto-serif;
 }
@@ -335,7 +335,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-  margin-left: 55px;
+  margin-left: 225px;
   width: 400px;
 }
 
@@ -368,19 +368,18 @@ body {
 
 .product-card-order {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: 346px;
-  height: 300px;
+  width: 650px;
+  height: 166px;
   box-sizing: border-box;
 }
 
 .product-card-order img {
-  width: 332px;
-  height: 193px;
+  width: 300px;
+  height: 150px;
   border-radius: 10px;
   margin-left: 7px;
   margin-top: 8px;
@@ -392,18 +391,24 @@ body {
 }
 
 .quantity-controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 134px;
+  background-color: white;
+  border-radius: 15px;
+  padding: 5px 15px;
+  font-size: 16px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 60px;
+  text-align: center;
+  font-family: noto-serif;
+  margin-top: 62px;
 }
 
 .quantity-input {
-  width: 50px;
+  width: 30px;
   height: 32px;
   text-align: center;
   font-size: 16px;
   padding: 5px;
+  border: none;
 }
 
 .delete-order-btn {
@@ -426,4 +431,55 @@ body {
 
 .delete-order-btn:active {
   background-color: #a93226;
+}
+
+.error-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f8f9fa;
+  font-family: noto-serif;
+}
+
+.error-box {
+  text-align: center;
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  width: 100%;
+}
+
+.error-box h1 {
+  font-size: 2.5rem;
+  color: #dc3545;
+  margin-bottom: 10px;
+}
+
+.error-box p {
+  font-size: 1.2rem;
+  color: #333333;
+  margin-bottom: 20px;
+}
+
+.back-home-btn {
+  display: inline-block;
+  background-color: #3e6ae1;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.back-home-btn:hover {
+  background-color: #4125e2;
+}
+
+.back-home-btn:hover {
+  background-color: #0e31a3;
 }
